# solana-governance-program

./: .gitignore  Anchor.toml  README.md  SECURITY.md  package.json
programs/gamaedtech-program/: Cargo.toml
programs/gamaedtech-program/src/: error.rs  lib.rs  state.rs
programs/gamaedtech-program/src/instructions/: fund.rs  init_stats.rs  mod.rs  proposal.rs  stack.rs  stake.rs  unstack.rs  unstake.rs  vote.rs
scripts/: close-stats.ts  init-stats.ts  init-vault.ts  realloc-stats.ts
tests/: solana-program.ts
