[package]
name = "gamaedtech-program"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_program"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
solana-security-txt = "1.1.1"
squads-multisig-program = { version = "2.0.0", features = ["cpi"] }


