[package]
name = "gamaedtech-program"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_program"

[features]
no-entrypoint = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
    ]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"]}
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"


